# aba

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MULTI_AGENT_PLAN.md  README.md  TOOL_DOCUMENTATION_REVIEW.md  TOOL_EXECUTION_PLAN.md  TROUBLESHOOTING.md  pyproject.toml  setup.py  start-aba  test_streaming.py  test_tools.py  test_websocket.py
src/aba/: __init__.py  agent.py  agent_builder.py  agent_manager.py  capabilities.py  chat.py  cli.py  language_model.py  planning.py  runtime.py  tool_schema.py  tools.py
src/aba/web/: __init__.py  agent_session.py  messages.py  server.py  streaming_model.py
src/aba/web/static/: index.html
src/aba/web/static/assets/: index-B9csyO1e.js  index-CnMF1xLT.js  index-D3kue6VH.css  index-JEpvTKXT.css
tests/: test_agent.py  test_agent_builder.py  test_agent_manager.py  test_chat.py  test_cli.py  test_cli_chat.py  test_integration.py  test_runtime.py  test_tool_schema.py  test_tools.py
web-ui/: README.md  package-lock.json  package.json  test-tool-display.mjs  vite.config.ts
web-ui/src/: AgentSelector.tsx  App.css  App.tsx  ChatInput.tsx  ChatMessage.tsx  useWebSocket.ts
