[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aba"
version = "0.1.0"
description = "Agent Building Agent - tooling to bootstrap new AI agents"
authors = [{name = "Auto Generated"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
aba = "aba.cli:app"
aba-web = "aba.web.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
# Include all files in web/static directory (built frontend)
include-package-data = true

[tool.setuptools.package-data]
"aba.web" = ["static/**/*"]
